Implement APIs for crawl data
